# MiscCodeCraft

./: .gitignore  README.md  clickEveryNseconds.py
DanceEditVisualizer/: README.md  requirements.txt  setup.py  visualize_edit_preferences.py
QRCodeGenerate/: generateQRCode.py  generateQRCodewithGUI.py  test.py
ScreenClicker/: simpleClickerF8.py
SimpleCalculator/: README.md  requirements-dev.txt  requirements.txt
SimpleCalculator/.cursor/rules/: project-structure.mdc
SimpleCalculator/src/: core.py
SimpleCalculator/tests/: test_core.py
gameFileChange/: data.sav  decoder.py  environment.yml  readSAVfile.py  setup.sh
rpd/: downloadnEdit.py  editTogether.py  pyproject.toml  songs.csv  youtubedownload.py
