[tool.poetry]
name = "rpd"
version = "0.1.0"
description = "packages for rpd stuff"
authors = ["Angelina"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.3.3"
yt-dlp = "^2025.10.14"
ffmpeg = "^1.4"
ffprobe = "^0.5"
pydub = "^0.25.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
